# univention-corporate-client

./: LICENSE  README.md
cdpinger/: AUTHORS  ChangeLog  Makefile.am  autogen.sh  configure.ac  release.conf
cdpinger/debian/: NEWS.Debian  README.Debian  cdpinger.install  changelog  control  copyright  ltspfs.examples  ltspfs.install  ltspfs.postinst  ltspfsd-core.install  ltspfsd-core.links  ltspfsd.install  ltspfsd.links  watch
cdpinger/doc/examples/: kde-desktop-icons  notify
cdpinger/init-ltsp.d/Debian/: 50-ltspfsd-udev-rules
cdpinger/man/: Makefile.am  cdpinger.1  lbmount.1  ltspfs.1  ltspfs_mount.1  ltspfs_umount.1  ltspfsd.1  ltspfsmounter.1
cdpinger/scripts/: Makefile.am  ltspfs_mount  ltspfs_umount  ltspfsmounter
cdpinger/scripts/ldm/: X10-delayed-mounter  X98-delayed-mounter
cdpinger/src/: Makefile.am  cdpinger.c  common.c  common.h  lbmount.c  ltspfs.c  ltspfs.h  ltspfsd.c  ltspfsd_functions.c  ltspfsd_functions.h
cdpinger/udev/: Makefile.am  ltspfsd.rules
doc/manual/: Makefile  (+20 more)
pulseaudio-xrdp/: Makefile.in  aclocal.m4  configure  configure.ac
ucc-image-toolkit/: ucc-image
univention-corporate-client/: 000ucc  70univention-write-system-policies.inst  ucc-archive-key.gpg  ucc-base.conf  ucc-ntpdate.conf  ucc-syspol.conf  ucc-update.conf  ucc.sh  univention-ucc-fetch-system-policies  univention-ucc-force-rw-boot  univention-ucc-image-update  univention-ucc-manage-persistent  univention-ucc-software-update  univention-ucc-sync-persistent-files
univention-kdm/: TODO
univention-lightdm/: univention-lightdm-save-pass  univention-run-lightdm-display-setup  univention-run-lightdm-greeter-setup  univention-run-lightdm-session  univention-run-lightdm-session-cleanup  univention-run-lightdm-session-setup
univention-session/: client_login.sh
univention-ucc-application-server/: 50univention-ucc-application-server.inst  univention-showload
univention-ucc-bootstrap/: libpam-systemd  modemmanager  ofono  whoopsie
univention-ucc-initramfs/: 51univention-ucc-initramfs.inst
univention-ucc-italc/: 99ucsschool-italc-key.inst
univention-ucc-join/: 45univention-join.inst  check_join_status.sh  joinscripthelper.lib  univention-create-keytab  univention-join  univention-mod-ldap-object.py  univention-run-join-scripts
(+656 files in other folders)
